# cpp-game-template

./: .gitignore  CMakeLists.txt  build.sh
Extlibs/: CMakeLists.txt
Source/: Game.cpp  Game.h  Texture.cpp  Texture.h  main.cpp
